<resources>
    <string name="app_name">CarNFC</string>

    <!-- url services -->
    <string name="url_server">http://192.168.0.9:11111/carnfcapirest/</string>
    <string name="url_service_login">person/login</string>
    <string name="url_service_register">person/add</string>
    <string name="url_service_cars">car/list</string>
    <string name="url_service_add_car">car/add</string>
    <string name="url_service_places">place/list</string>
    <string name="url_service_add_place">place/add</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Register activity -->
    <string name="register_message">Veuillez saisir vos informations</string>
    <string name="register_male">Masculin</string>
    <string name="register_female">Féminin</string>
    <string name="register_register">S\'enregistrer</string>
    <string name="register_lastname">Votre nom</string>
    <string name="register_firstname">Votre prenom</string>
    <string name="register_phone">Téléphone portable</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_password_verify">Confirmation mot de passe</string>
    <string name="please_wait">Loading...</string>
    <string name="inscription_error_field_empty">Le champ est vide...</string>
    <string name="inscription_error_identical_password">Mot de passe non identique...</string>
    <string name="inscription_ok">Inscription terminée !</string>

    <!-- Error messages -->
    <string name="error_parse_json">Erreur: lecture du json</string>
</resources>
