<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/register_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_register"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/register_send">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/register_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_name_margin_top"
                android:layout_marginBottom="@dimen/form_name_margin_bottom"
                android:inputType="textPersonName"
                android:hint="@string/register_lastname" />

            <EditText
                android:id="@+id/register_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_name_margin_top"
                android:layout_marginBottom="@dimen/form_name_margin_bottom"
                android:layout_below="@id/register_lastname"
                android:inputType="textPersonName"
                android:hint="@string/register_firstname" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_component_margin_top"
                android:layout_marginBottom="@dimen/form_component_margin_bottom"
                android:layout_below="@id/register_firstname"
                android:inputType="textEmailAddress"
                android:hint="@string/register_email"/>

            <EditText
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_component_margin_top"
                android:layout_marginBottom="@dimen/form_component_margin_bottom"
                android:layout_below="@id/register_email"
                android:inputType="textPassword"
                android:hint="@string/register_password"/>

            <EditText
                android:id="@+id/register_pass_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_component_margin_top"
                android:layout_marginBottom="@dimen/form_component_margin_bottom"
                android:layout_below="@id/register_pass"
                android:inputType="textPassword"
                android:hint="@string/register_password_verify"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>